--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #d6d7da !important;
+    background: whitesmoke !important;
 }
 
 .profil-post {
@@ -19,10 +19,10 @@ input:focus, select:focus, textarea:focus, button:focus {
 .bloc_Parent_commentaire {
     height: fit-content;
     border-radius: 15px;
-    transition:  0.6s ease-out !important;
+    transition: 0.6s ease-out !important;
 }
 
-.hideurClass {
+.hideurClass{
     display: none !important;
 }
 
@@ -31,12 +31,19 @@ input:focus, select:focus, textarea:focus, button:focus {
     color: #071035;
 }
 
+.liker {
+    color: #07175a;
+}
+
 .fa-paper-plane {
     font-size: 2rem;
 }
 
+
+
 .faIconsBnt:hover {
     color: #071035;
+    transform: scale(1.2);
 }
 
 .reactionAuthers {
