--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ input:focus, select:focus, textarea:focus, button:focus {
 }
 
 .titre_article {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     color: rgb(3, 3, 34);
 }
@@ -176,6 +176,8 @@ ul {
 
 .entete {
     background: #383c4d !important;
+    height: 80px !important;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .sub_btn_profi>li {
@@ -279,4 +281,69 @@ textarea, .title_eve {
     margin-right: auto !important;
     font-size: 20px;
     text-align: center;
+}
+
+nav {
+    background: #383c4d !important;
+    height: 80px !important;
+    color: #dcdfe7 !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.imagePoster {
+    height: 22rem !important;
+    width: 95% !important;
+}
+
+.profil_content_P {
+    width: 10rem !important;
+    border: 2px solid dashed;
+}
+
+.content_feedBack_text {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+
+.imgfeedback_profil {
+    border-radius: 50%;
+    border: 8px solid #383c4d;
+}
+
+.nomPre_feedBack {
+    color: #383c4d;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.feedBack_titre {
+    font-size: 23px;
+    font-family: lato;
+}
+
+.profil_partageDeux {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    border: 4px solid #383c4d;
+}
+
+.titre_feedBack_profil {
+    font-size: 15px;
+    color: #383c4d;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.items_feedback {
+    background: #dcdfe7;
+}
+
+.Mbouton {
+    border: 2px solid #383c4d !important;
+    background: rgb(226, 225, 231) !important;
+    color: #383c4d !important;
+}
+
+.Mbouton:hover {
+    color: white !important;
+    background: #383c4d !important;
 }
