--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,24 @@ input:focus, select:focus, textarea:focus, button:focus {
 
 .togleIconCommente {
     color: #071035 !important;
+    transform: scale(1.1);
+}
+
+.les_commentaires {
+    max-height: 230px !important;
+    overflow: auto
+}
+
+.user_a_Commente {
+    color: #071755 !important;
+    font-size: 13px;
+    font-weight: bold;
+    font-style: oblique;
+}
+
+.showcommentaire:hover {
+    color: #071755 !important;
+    transform: scale(1.1);
 }
 
 .reactionAuthers {
@@ -346,4 +364,16 @@ nav {
 .Mbouton:hover {
     color: white !important;
     background: #383c4d !important;
+}
+
+.img_user_commentaeur {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #383c4d;
+}
+
+.commentaireMon {
+    background: #cdcdd4;
+    color: #030718;
 }
