ajout de la colonne report dans la table gestion user et gestion port , pour voir combien de fois un utlisateur a ete signaler ou un post

--- a/styles/designY.css
+++ b/styles/designY.css
@@ -118,6 +118,7 @@ input:focus, select:focus, textarea:focus, button:focus {
     background: #3d809d !important;
     color: aliceblue;
     font-weight: bold;
+    height: 3.2rem !important;
 }
 
 .border-munted {
