--- a/styles/designY.css
+++ b/styles/designY.css
@@ -68,6 +68,10 @@ input:focus, select:focus, textarea:focus, button:focus {
     transform: scale(1.2);
 }
 
+.linkImageH:hover {
+    transform: scale(1.2);
+}
+
 .btnPoster:hover {
     transform: scale(1.2);
     /* transform: rotate(180deg); */
@@ -908,7 +912,7 @@ tbody {
     background: #13204d !important;
 }
 
-.macitation {
+.macitation, .bacgkroundBouge {
     background-color: #ffffff;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(313,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(113,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='23.429999999999996'%3E%3Cpath transform='translate(-112 -30.4) rotate(-34 1409 581) scale(0.7168)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='7.8100000000000005' transform='translate(-274 124) rotate(-12.8 800 450) scale(0.9613999999999999)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-48.4 78) rotate(-178 401 736) scale(0.9613999999999999)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='7.1'%3E%3Cpath transform='translate(744 50.4) rotate(-12.6 150 345) scale(1.0736)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='15.620000000000001' transform='translate(54 -360) rotate(-273.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-184 8) rotate(-45.6 1400 132) scale(0.5)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -1021,7 +1025,7 @@ tbody {
     background: rgba(79, 135, 199, 0.637);
 }
 
-.textareaRepSujet{
-    background:rgba(255, 255, 255, 0.473) !important;
-    color:rgb(3, 3, 34) !important;
+.textareaRepSujet {
+    background: rgba(255, 255, 255, 0.473) !important;
+    color: rgb(3, 3, 34) !important;
 }
